[package]
name = "tape-e2e-simnet"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "LiteSVM + in-memory multi-node simnet harness for Tapedrive e2e testing"
repository.workspace = true
readme = "README.md"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true
rpc-litesvm.workspace = true
rpc-client.workspace = true
tape-api.workspace = true
tape-node2.workspace = true
tape-store.workspace = true
tape-protocol.workspace = true
peer-manager.workspace = true
peer-http.workspace = true
rpc.workspace = true
tape-core.workspace = true
tape-chain-harness.workspace = true
tokio-util = "0.7"
solana-sdk.workspace = true
tracing-subscriber = "0.3"
tracing = "0.1"
store-memory.workspace = true
reqwest.workspace = true
tape-sdk.workspace = true
tape-crypto.workspace = true

[dev-dependencies]
tokio.workspace = true
rand.workspace = true
