[package]
name = "tape-e2e-testnet"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[[bin]]
name = "testnet"
path = "src/bin/testnet/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
rpc.workspace = true
rpc-client.workspace = true
rpc-solana.workspace = true
tape-api.workspace = true
tape-core.workspace = true
tape-crypto.workspace = true
tape-protocol.workspace = true
tape-node.workspace = true
tape-sdk.workspace = true
tape-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
rand.workspace = true
axum.workspace = true
arc-swap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap.workspace = true
nix = { version = "0.29", features = ["signal"] }
