[package]
name = "tape-core"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-core"

[dependencies]
tape-crypto.workspace = true
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
five8.workspace = true
serde.workspace = true
wincode = { workspace = true, optional = true }
wincode-derive = { workspace = true, optional = true }

[dev-dependencies]
solana-keypair.workspace = true
wincode.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
std = []
solana = []
wincode = ["dep:wincode", "dep:wincode-derive", "tape-crypto/wincode"]
