[package]
name = "tape-metrics"
version.workspace = true
edition.workspace = true
description = "Metrics infrastructure for Tapedrive"

[features]
default = []
metrics = ["prometheus"]

[dependencies]
prometheus = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
prometheus = { workspace = true, optional = true, features = ["process"] }
