[package]
name = "tape-snapshot"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
tape-core = { workspace = true, features = ["wincode"] }
tape-crypto.workspace = true
tape-slicer.workspace = true
bytemuck.workspace = true
lz4_flex.workspace = true
thiserror.workspace = true
