[package]
name = "tape-spooler"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/tape-spooler"

[dependencies]
tape-core.workspace = true
tape-crypto.workspace = true

[dev-dependencies]
