[package]
name = "tape-node-api"
version.workspace = true
edition.workspace = true
description = "Shared route constants and request/response types for the node API"

[dependencies]
tape-core = { workspace = true, features = ["wincode"] }
tape-crypto = { workspace = true, features = ["wincode"] }
serde = { workspace = true }
wincode = { workspace = true }
wincode-derive = "0.1"
